--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
 	</head>
 	<body class="is-preload">
 
@@ -68,19 +69,19 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall ">
-								<a href="https://dariuszb94.github.io/Sound_Generator/" class="image fit thumb"><img src="images/links/Sound_generator.jpg" alt="" /></a>
+								<a href="https://dariuszb94.github.io/Sound_Generator/" class="image fit thumb transform" ><img src="images/links/Sound_generator.jpg" alt="" /></a>
 								<h4><strong> React sound generator</strong></h4>
-								<p>Clicking on pads or clicking on keyboard can generate sounds. </p>
+								<p>Clicking on pads or clicking on keyboard can generate sounds. Here's a <a href="https://github.com/Dariuszb94/Sound_Generator">code</a>.</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
-								<a href="https://dariuszb94.github.io/Quote-Generator/" class="image fit thumb"><img src="images/links/Quote_generator.jpg" alt="" /></a>
+								<a href="https://dariuszb94.github.io/Quote_Generator/" class="image fit thumb transform"><img src="images/links/Quote_generator.jpg" alt="" /></a>
 								<h4><strong>Quote generator</strong></h4>
-								<p>Random quotes are generated when click is done, also there is possibility to send quote by twitter.</p>
+								<p>Random quotes are generated when click is done, also there is possibility to send quote by twitter. Here's a <a href="https://github.com/Dariuszb94/Quote_Generator">code</a>.</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h4><strong>Tortor metus commodo</strong></h4>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="https://dariuszb94.github.io/Tic_tac_toe/" class="image fit thumb transform"><img src="images/links/Tic-tac-toe.jpg" alt="" /></a>
+								<h4><strong>React Tic-tac-toe</strong></h4>
+								<p>Tic-tac-toe game where you can rewind your moves. Here's a <a href="https://github.com/Dariuszb94/Tic_tac_toe">code</a>.</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
