--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://dariuszb94.github.io/Sound_Generator/" class="image fit thumb transform" ><img src="images/links/Sound_generator.jpg" alt="" /></a>
 								<h4><strong> React sound generator</strong></h4>
-								<p>Clicking on pads or clicking on keyboard can generate sounds. Here's a <a href="https://github.com/Dariuszb94/Sound_Generator">code</a>.</p>
+								<p>Clicking on pads or clicking on keyboard can generate sounds.</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://dariuszb94.github.io/Quote_Generator/" class="image fit thumb transform"><img src="images/links/Quote_generator.jpg" alt="" /></a>
 								<h4><strong>Quote generator</strong></h4>
-								<p>Random quotes are generated when click is done, also there is possibility to send quote by twitter. Here's a <a href="https://github.com/Dariuszb94/Quote_Generator">code</a>.</p>
+								<p>Random quotes are generated when click is done, also there is possibility to send quote by twitter.</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://dariuszb94.github.io/Tic_tac_toe/" class="image fit thumb transform"><img src="images/links/Tic_tac_toe.jpg" alt="" /></a>
 								<h4><strong>React Tic-tac-toe</strong></h4>
-								<p>Tic-tac-toe game where you can rewind your moves. Here's a <a href="https://github.com/Dariuszb94/Tic_tac_toe">code</a>.</p>
+								<p>Tic-tac-toe game where you can rewind your moves.</p>
 							</article>
 				
 						</div>
