--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 						<li>HTML</li>
 							<li>React</li>
 							<li>Angular</li>
+							<li>AJAX</li>
 							<li>TypeScript</li>
 							<li>jQuery</li>
 							<li>Angular</li>
