--- a/index.html
+++ b/index.html
@@ -67,22 +67,28 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>Recent projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://dariuszb94.github.io/Sound_Generator/" class="image fit thumb transform" ><img src="images/links/Sound_generator.jpg" alt="" /></a>
-								<h4><strong> React sound generator</strong></h4>
+								<h4><strong>React sound generator</strong></h4>
 								<p>Clicking on pads or clicking on keyboard can generate sounds.</p>
 							</article>
-							<article class="col-6 col-12-xsmall ">
-								<a href="https://dariuszb94.github.io/Quote_Generator/" class="image fit thumb transform"><img src="images/links/Quote_generator.jpg" alt="" /></a>
-								<h4><strong>Quote generator</strong></h4>
-								<p>Random quotes are generated when click is done, also there is possibility to send quote by twitter.</p>
+					
+								<article class="col-6 col-12-xsmall ">
+								<a href="https://dariuszb94.github.io/Breakout/" class="image fit thumb transform"><img src="images/links/Breakout.jpg" alt="" /></a>
+								<h4><strong>Breakout game</strong></h4>
+								<p>Breakout game. Destroy bricks with ball. You can move paddle with arrows or mouse.</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://dariuszb94.github.io/Tic_tac_toe/" class="image fit thumb transform"><img src="images/links/Tic_tac_toe.jpg" alt="" /></a>
 								<h4><strong>React Tic-tac-toe</strong></h4>
 								<p>Tic-tac-toe game where you can rewind your moves.</p>
+							</article>
+									<article class="col-6 col-12-xsmall ">
+								<a href="https://dariuszb94.github.io/Quote_Generator/" class="image fit thumb transform"><img src="images/links/Quote_generator.jpg" alt="" /></a>
+								<h4><strong>Quote generator</strong></h4>
+								<p>Random quotes are generated when click is done, also there is possibility to send quote by twitter.</p>
 							</article>
 				
 						</div>
