--- a/index.html
+++ b/index.html
@@ -10,13 +10,32 @@
 
 	</head>
 	<body class="is-preload">
+<!-- nav -->
 
+<nav role="navigation">
+  <div id="menuToggle">
+
+    <input type="checkbox" />
+
+    <span></span>
+    <span></span>
+    <span></span>
+    
+ 
+    <ul id="menu">
+      <a href="#header"><li>Home</li></a>
+      <a href="#one"><li>Skills</li></a>
+      <a href="#two"><li>Projects</li></a>
+      <a href="#three"><li>Contact</li></a>
+    </ul>
+  </div>
+</nav>
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>Dariusz Berer</strong><br />
-					Junior Frontend Developer<br />
+					<h1>Junior Frontend Developer</h1><br />
 
 					</h1>
 				</div>
