--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
 								<h4><strong>React Tic-tac-toe</strong></h4>
 								<p>Tic-tac-toe game where you can rewind your moves. </p>
 							</article>
+									<article class="col-6 col-12-xsmall ">
+								<a href="https://dariuszb94.github.io/MovieApp/" class="image fit thumb transform"><img src="images/links/Movie_DB.jpg" alt="" /></a>
+							<h4><strong>React The Movie Database</strong></h4>
+								<p>Search engine for movies. Type movie title in searchbar and click "search", than you can go to one of the results.  </p>
+							</article>
+
 								<article class="col-6 col-12-xsmall ">
 								<a href="https://dariuszb94.github.io/JSON_and_AJAX/" class="image fit thumb transform"><img src="images/links/JSON_and_AJAX.jpg" alt="" /></a>
 								<h4><strong>JSON and AJAX data fetch</strong></h4>
