new project add

--- a/index.html
+++ b/index.html
@@ -89,36 +89,40 @@
 						<h2>Recent projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall ">
-								<a href="https://dariuszb94.github.io/Sound_Generator/" class="image fit thumb transform" ><img src="images/links/Sound_generator.jpg" alt="" /></a>
+								<a href="https://dariuszb94.github.io/Sound_Generator/" class="image fit thumb transform" ><img src="images/links/Sound_generator.jpg" alt="React sound generator" /></a>
 								<h4><strong>React sound generator</strong></h4>
 								<p>Clicking on pads or clicking on keyboard can generate sounds.</p>
 							</article>
 				
 
 								<article class="col-6 col-12-xsmall ">
-								<a href="https://dariuszb94.github.io/Breakout/" class="image fit thumb transform"><img src="images/links/Breakout.jpg" alt="" /></a>
+								<a href="https://dariuszb94.github.io/Breakout/" class="image fit thumb transform"><img src="images/links/Breakout.jpg" alt="Breakout game" /></a>
 								<h4><strong>Breakout game</strong></h4>
 								<p>Breakout game. Destroy bricks with ball. You can move paddle with arrows or mouse.</p>
 							</article>
 								
 							<article class="col-6 col-12-xsmall ">
-								<a href="https://dariuszb94.github.io/Tic_tac_toe/" class="image fit thumb transform"><img src="images/links/Tic_tac_toe.jpg" alt="" /></a>
+								<a href="https://dariuszb94.github.io/Tic_tac_toe/" class="image fit thumb transform"><img src="images/links/Tic_tac_toe.jpg" alt="Tic tac toe game" /></a>
 								<h4><strong>React Tic-tac-toe</strong></h4>
 								<p>Tic-tac-toe game where you can rewind your moves. </p>
 							</article>
 									<article class="col-6 col-12-xsmall ">
-								<a href="https://dariuszb94.github.io/MovieApp/" class="image fit thumb transform"><img src="images/links/Movie_DB.jpg" alt="" /></a>
+								<a href="https://dariuszb94.github.io/MovieApp/" class="image fit thumb transform"><img src="images/links/Movie_DB.jpg" alt="Movie DataBase" /></a>
 							<h4><strong>React The Movie Database</strong></h4>
 								<p>Search engine for movies. Type movie title in searchbar and click "search", than you can go to one of the results.  </p>
 							</article>
-
+							<article class="col-6 col-12-xsmall ">
+								<a href="https://dariuszb94.github.io/React_snake_game/" class="image fit thumb transform"><img src="images/links/Snake.jpg" alt="Snake game" /></a>
+								<h4><strong>React Snake Game</strong></h4>
+								<p>Snake can be steered by using arrow. Game will be stopped if snake bite itself</p>
+							</article>
 								<article class="col-6 col-12-xsmall ">
-								<a href="https://dariuszb94.github.io/JSON_and_AJAX/" class="image fit thumb transform"><img src="images/links/JSON_and_AJAX.jpg" alt="" /></a>
+								<a href="https://dariuszb94.github.io/JSON_and_AJAX/" class="image fit thumb transform"><img src="images/links/JSON_and_AJAX.jpg" alt="JSON and AJAX data fetch" /></a>
 								<h4><strong>JSON and AJAX data fetch</strong></h4>
 								<p>Fetching data from external server with JSON and AJAX. Error handling included.</p>
 							</article>
 									<article class="col-6 col-12-xsmall ">
-								<a href="https://dariuszb94.github.io/Quote_Generator/" class="image fit thumb transform"><img src="images/links/Quote_generator.jpg" alt="" /></a>
+								<a href="https://dariuszb94.github.io/Quote_Generator/" class="image fit thumb transform"><img src="images/links/Quote_generator.jpg" alt="Quote generator" /></a>
 								<h4><strong>Quote generator</strong></h4>
 								<p>Random quotes are generated when click is done, also there is possibility to send quote by twitter.</p>
 							</article>
@@ -137,9 +141,9 @@
 
 					<div class="contact">
 						<div>	<i class="icon solid fa-mobile-alt gray"><span class="label">Phone</span></i></div>
-						<div><p class="gray">535-262-562</p></div>
+						<div><p class="gray"><a  href="tel:#+48639852741">535-262-562</a></p></div>
 						<div><i class="icon solid fa-envelope gray"><span class="label">Email</span></i></div>
-						<div><p class="gray">dariusz.berer@gmail.com</p></div>
+						<div><p class="gray"><a href="mailto:kontakt@witabud.pl">dariusz.berer@gmail.com</a></p></div>
 					</div>
 						</section>
 		<!-- Footer -->
