--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
 								<p>Weather App lets you check current temperature, pressure, wind speed, sunset time, sunrise time in choosen city. </p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
+								<a href="https://dariuszb94.github.io/Traffic-racer/" class="image fit thumb transform"><img src="images/links/Traffic.jpg" alt="Traffic racer" /></a>
+								<h4><strong>JQuery Traffic Racer</strong></h4>
+								<p>Avoid collision with other cars using arrow keys. You can also see your high score. </p>
+							</article>
+							<article class="col-6 col-12-xsmall ">
 								<a href="https://dariuszb94.github.io/JSON_and_AJAX/" class="image fit thumb transform"><img src="images/links/JSON_and_AJAX.jpg" alt="JSON and AJAX data fetch" /></a>
 								<h4><strong>JSON and AJAX data fetch</strong></h4>
 								<p>Fetching data from external server with JSON and AJAX. Error handling included.</p>
