--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 
-<html>
+<html lang="en">
 	<head>
 		<title>Portfolio</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -12,8 +12,8 @@
 	<body class="is-preload">
 <!-- nav -->
 
-<nav role="navigation">
-  <div id="menuToggle">
+<nav>
+  <div id="menuToggle" class="menuToggle">
 
     <input type="checkbox" />
 
@@ -22,11 +22,11 @@
     <span></span>
     
  
-    <ul id="menu">
-      <a href="#header"><li>Home</li></a>
-      <a href="#one"><li>Skills</li></a>
-      <a href="#two"><li>Projects</li></a>
-      <a href="#three"><li>Contact</li></a>
+    <ul id="menu" class="menu">
+     <li> <a href="#header" >Home</a></li>
+  <li><a href="#one">Skills</a></li>
+ <li>     <a href="#two">Projects</a></li>
+ <li>     <a href="#three">Contact</a></li>
     </ul>
   </div>
 </nav>
@@ -34,10 +34,10 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Dariusz Berer</strong><br />
+					<h1><strong>Dariusz Berer</strong></h1><br />
 					<h1>Junior Frontend Developer</h1><br />
 
-					</h1>
+					
 				</div>
 			</header>
 
@@ -168,6 +168,7 @@
 						<div><p class="gray"><a href="mailto:kontakt@witabud.pl">dariusz.berer@gmail.com</a></p></div>
 					</div>
 						</section>
+						</div>
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
