--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="avatar" /></a>
 					<h1><strong>Dariusz Berer</strong></h1><br />
 					<h1>Junior Frontend Developer</h1><br />
 
