contact button style

--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
 
 					<div class="contact">
 						<div>	<i class="icon solid fa-mobile-alt gray"><span class="label">Phone</span></i></div>
-						<div><p class="gray"><a  href="tel:#+48639852741">535-262-562</a></p></div>
+						<div><p class="gray"><a  href="tel:#+48535262562">535-262-562</a></p></div>
 						<div><i class="icon solid fa-envelope gray"><span class="label">Email</span></i></div>
-						<div><p class="gray"><a href="mailto:kontakt@witabud.pl">dariusz.berer@gmail.com</a></p></div>
+						<div><p class="gray"><a href="mailto:dariusz.berer@gmail.com">dariusz.berer@gmail.com</a></p></div>
 					</div>
 						</section>
 						</div>
