--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 	<img src="images\skills\react.png" alt="react" class="frontend-img">
 	<img src="images\skills\angular.png" alt="angular" class="frontend-img">
 	<img src="images\skills\jquery.png" alt="jquery" class="frontend-img">
+	<img src="images\skills\vue.png" alt="vue" class="frontend-img">
 					</div>
 					</div>
 					<div class="backend-main">
@@ -122,6 +123,13 @@
 								<p>Snake can be steered by using arrow. Game will be stopped if snake bite itself
 									<br />
 									<span class="project-tech">Tech stack: HTML | CSS | React | Node.js</span></p>
+							</article>
+							<article class="col-6 col-12-xsmall ">
+								<a href="https://dariuszb94.github.io/calc/" class="image fit thumb transform" ><img src="images/links/Calculator.jpg" alt="Calculator app" /></a>
+								<div class="linkButtons"><button class="codeButton btn btn-outline-secondary" onclick="window.location.href = 'https://github.com/Dariuszb94/calc';">Code</button><button class="demoButton btn btn-outline-secondary" onclick="window.location.href = 'https://dariuszb94.github.io/calc/';">Demo</button></div>
+								<h4><strong>Vue Calculator App</strong></h4>
+								<p>Vue App which lets you do basic math operations.<br />
+									<span class="project-tech">	Tech stack: HTML | CSS | Vue |Bootstrap | Node.js</span></p>
 							</article>
 							
 							<article class="col-6 col-12-xsmall ">
