--- a/index.html
+++ b/index.html
@@ -118,63 +118,71 @@
                             <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/Breakout';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/Breakout/';">Demo</button></div>
                             <h4><strong>Breakout game</strong></h4>
                             <p>Breakout game. Destroy bricks with ball. You can move paddle with arrows or mouse.<br />
-                            <span class="project-tech">Tech stack: HTML | CSS | Javascript | Canvas</span></p>    
+                                <span class="project-tech">Tech stack: HTML | CSS | Javascript | Canvas</span>
+                            </p>    
                         </article>
                         <article class="work">
                             <a href="https://dariuszb94.github.io/Tic_tac_toe/" ><img src="images/links/Tic_tac_toe.jpg" alt="Tic tac toe game" class="link-image"/></a>
                             <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/Tic_tac_toe';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/Tic_tac_toe/';">Demo</button></div>
                             <h4><strong>React Tic-tac-toe</strong></h4>
                             <p>Tic-tac-toe game where you can rewind your moves. <br />
-                            <span class="project-tech">Tech stack: HTML | CSS | React</span></p>
+                                <span class="project-tech">Tech stack: HTML | CSS | React</span>
+                            </p>
                         </article>
                         <article class="work">
                             <a href="https://dariuszb94.github.io/MovieApp/" ><img src="images/links/Movie_DB.jpg" alt="Movie DataBase"  class="link-image"/></a>
                             <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/MovieApp';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/MovieApp/';">Demo</button></div>
                             <h4><strong>React The Movie Database</strong></h4>
                             <p>Search engine for movies. Type movie title in searchbar and click "search", than you can go to one of the results. <br />
-                            <span class="project-tech">	Tech stack: HTML | CSS | React | Node.js | Axios | API</span></p>
+                                <span class="project-tech">	Tech stack: HTML | CSS | React | Node.js | Axios | API</span>
+                            </p>
                         </article>
                         <article class="work">
                             <a href="https://dariuszb94.github.io/React_snake_game/"><img src="images/links/Snake.jpg" alt="Snake game"  class="link-image"/></a>
                             <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/React_snake_game';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/React_snake_game/';">Demo</button></div>
                             <h4><strong>React Snake Game</strong></h4>
                             <p>Snake can be steered by using arrow. Game will be stopped if snake bite itself.<br />
-                            <span class="project-tech">Tech stack: HTML | CSS | React | Node.js</span></p>
+                                <span class="project-tech">Tech stack: HTML | CSS | React | Node.js</span>
+                            </p>
                          </article>
                          <article class="work">
                             <a href="https://dariuszb94.github.io/Sound_Generator/"><img src="images/links/Sound_generator.jpg" alt="React sound generator" class="link-image" /></a>
                             <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/Sound_Generator';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/Sound_Generator/';">Demo</button></div>
                             <h4><strong>React Sound Generator</strong></h4>
                             <p>Clicking on pads or clicking on keyboard can generate sounds.<br />
-                            <span class="project-tech">	Tech stack: HTML | CSS | React</span></p>
+                                <span class="project-tech">	Tech stack: HTML | CSS | React</span>
+                            </p>
                         </article>
                         <article class="work">
                             <a href="https://dariuszb94.github.io/Weather-App/"><img src="images/links/Weather.jpg" alt="React Weather App"  class="link-image"/></a>
                             <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/Weather-App';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/Weather-App/';">Demo</button></div>
                             <h4><strong>React Weather App</strong></h4>
                             <p>Weather App lets you check current temperature, pressure, wind speed, sunset time, sunrise time in choosen city. <br />
-                            <span class="project-tech">Tech stack: HTML | CSS | React | Node.js | API</span></p>
+                                <span class="project-tech">Tech stack: HTML | CSS | React | Node.js | API</span>
+                            </p>
                         </article>
                         <article class="work">
                             <a href="https://dariuszb94.github.io/Traffic-racer/"><img src="images/links/Traffic.jpg" alt="Traffic racer" class="link-image" /></a>
                             <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/Traffic-racer';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/Traffic-racer/';">Demo</button></div>
                             <h4><strong>JQuery Traffic Racer</strong></h4>
                             <p>Avoid collision with other cars using arrow keys. You can also see your high score. <br />
-                            <span class="project-tech">Tech stack: HTML | CSS | jQuery | Bootstrap </span></p> 
+                                <span class="project-tech">Tech stack: HTML | CSS | jQuery | Bootstrap</span>
+                            </p> 
                         </article>
-                        <article class="work">
-                            <a href="https://dariuszb94.github.io/JSON_and_AJAX/"><img src="images/links/JSON_and_AJAX.jpg" alt="JSON and AJAX data fetch "  class="link-image"/></a>
-                            <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/JSON_and_AJAX';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/JSON_and_AJAX/';">Demo</button></div>
-                            <h4><strong>JSON and AJAX data fetch</strong></h4>
-                            <p>Fetching data from external server with JSON and AJAX. Error handling included.<br />
-                            <span class="project-tech">	Tech stack: HTML | CSS | JavaScript | JSON | AJAX </span></p>
+                    	<article class="work">
+                            <a href="https://dariuszb94.github.io/calc/"><img src="images/links/Calculator.jpg" alt="Calculator app" class="link-image" /></a>
+                            <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/calc';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/calc/';">Demo</button></div>
+                            <h4><strong>Vue Calculator App</strong></h4>
+                            <p>Vue App which lets you do basic math operations.<br />
+                                <span class="project-tech">	Tech stack: HTML | CSS | Vue |Bootstrap | Node.js</span></p>
                         </article>
                         <article class="work">
                         <a href="https://dariuszb94.github.io/Quote_Generator/"><img src="images/links/Quote_generator.jpg" alt="Quote generator" class="link-image"/></a>
                             <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/Quote_Generator';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/Quote_Generator/';">Demo</button></div>
                             <h4><strong>Quote generator</strong></h4>
                             <p>Random quotes are generated when click is done, also there is possibility to send quote by twitter.<br />
-                            <span class="project-tech">	Tech stack: HTML | CSS | jQuery | Bootstrap </span></p>
+                                <span class="project-tech">	Tech stack: HTML | CSS | jQuery | Bootstrap </span>
+                            </p>
                         </article>
                     </div>
                 </section>
