change skill front

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <a href="https://dariuszb94.github.io/Breakout/"><img src="images/links/Breakout.jpg" class="link-image" alt="Breakout game" /></a>
                             <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/Breakout';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/Breakout/';">Demo</button></div>
                             <h4><strong>Breakout game</strong></h4>
-                            <p>Breakout game. Destroy bricks with ball. You can move paddle with arrows or mouse.<br />
+                            <p>Breakout game. Destroy bricks with ball. You can move paddle with arrows, mouse.<br />
                                 <span class="project-tech">Tech stack: HTML | CSS | Javascript | Canvas</span>
                             </p>    
                         </article>
