--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 </div>
                             </div>
                             <div class="backend-main">
-                                <header><h3>Backend</h3></header>
+                                <header><h3>Backend:</h3></header>
                                 <div class="backend animate-skills">
                                     <img src="images/skills/jsp.png" alt="jsp" class="frontend-img">
                                 </div>
