new project add

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <a href="https://dariuszb94.github.io/Breakout/"><img src="images/links/Breakout.jpg" class="link-image" alt="Breakout game" /></a>
                             <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/Breakout';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/Breakout/';">Demo</button></div>
                             <h4><strong>Breakout game</strong></h4>
-                            <p>Breakout game. Destroy bricks with ball. You can move paddle with arrows, mouse.<br />
+                            <p>Breakout game. Destroy bricks with ball. You can move paddle with arrows or mouse.<br />
                                 <span class="project-tech">Tech stack: HTML | CSS | Javascript | Canvas</span>
                             </p>    
                         </article>
@@ -145,6 +145,14 @@
                                 <span class="project-tech">Tech stack: HTML | CSS | React | Node.js</span>
                             </p>
                          </article>
+                         <article class="work">
+                            <a href="https://dariuszb94.github.io/pokemon/"><img src="images/links/pokemon.jpg" alt="Angular Pokedex" class="link-image" /></a>
+                            <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/pokemon';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/pokemon/';">Demo</button></div>
+                            <h4><strong>Angular Pokedex</strong></h4>
+                            <p>List of pokemons fetched from API. You can choose your pokemon from list or search it.<br />
+                                <span class="project-tech">	Tech stack: HTML | CSS | Angular | API</span>
+                            </p>
+                        </article>
                          <article class="work">
                             <a href="https://dariuszb94.github.io/Sound_Generator/"><img src="images/links/Sound_generator.jpg" alt="React sound generator" class="link-image" /></a>
                             <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/Sound_Generator';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/Sound_Generator/';">Demo</button></div>
