--- a/index.html
+++ b/index.html
@@ -114,6 +114,29 @@
                     <h2>Recent projects</h2>
                     <div class="works">
                         <article class="work">
+                            <a href="https://clothshop-1726f.web.app/"><img src="images/links/Cloth_shop.jpg" alt="Cloth app" class="link-image" /></a>
+                            <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/shop';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://clothshop-1726f.web.app/'">Demo</button></div>
+                            <h4><strong>Vue Cloth Shop</strong></h4>
+                            <p>You can navigate between cloth sections. Clicking "BUY" adds item to your cart. You can check value of your cart at any moment by clicking on cart icon.<br />
+                                <span class="project-tech">	Tech stack: HTML | CSS | Vue |Vuex</span></p>
+                        </article>
+                        <article class="work">
+                            <a href="https://dariuszb94.github.io/Breakout/"><img src="images/links/Breakout.jpg" class="link-image" alt="Breakout game" /></a>
+                            <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/Breakout';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/Breakout/';">Demo</button></div>
+                            <h4><strong>Breakout game</strong></h4>
+                            <p>Breakout game. Destroy bricks with ball. You can move paddle with arrows or mouse.<br />
+                                <span class="project-tech">Tech stack: HTML | CSS | Javascript | Canvas</span>
+                            </p>    
+                        </article>
+                        <article class="work">
+                            <a href="https://dariuszb94.github.io/Tic_tac_toe/" ><img src="images/links/Tic_tac_toe.jpg" alt="Tic tac toe game" class="link-image"/></a>
+                            <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/Tic_tac_toe';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/Tic_tac_toe/';">Demo</button></div>
+                            <h4><strong>React Tic-tac-toe</strong></h4>
+                            <p>Tic-tac-toe game where you can rewind your moves. <br />
+                                <span class="project-tech">Tech stack: HTML | CSS | React</span>
+                            </p>
+                        </article>
+                        <article class="work">
                             <a href="https://dariuszb94.github.io/MovieApp/" ><img src="images/links/Movie_DB.jpg" alt="Movie DataBase"  class="link-image"/></a>
                             <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/MovieApp';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/MovieApp/';">Demo</button></div>
                             <h4><strong>React The Movie Database</strong></h4>
@@ -143,22 +166,6 @@
                             <h4><strong>React Sound Generator</strong></h4>
                             <p>Clicking on pads or clicking on keyboard can generate sounds.<br />
                                 <span class="project-tech">	Tech stack: HTML | CSS | React</span>
-                            </p>
-                        </article>
-                        <article class="work">
-                            <a href="https://dariuszb94.github.io/Breakout/"><img src="images/links/Breakout.jpg" class="link-image" alt="Breakout game" /></a>
-                            <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/Breakout';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/Breakout/';">Demo</button></div>
-                            <h4><strong>Breakout game</strong></h4>
-                            <p>Breakout game. Destroy bricks with ball. You can move paddle with arrows or mouse.<br />
-                                <span class="project-tech">Tech stack: HTML | CSS | Javascript | Canvas</span>
-                            </p>    
-                        </article>
-                        <article class="work">
-                            <a href="https://dariuszb94.github.io/Tic_tac_toe/" ><img src="images/links/Tic_tac_toe.jpg" alt="Tic tac toe game" class="link-image"/></a>
-                            <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/Tic_tac_toe';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/Tic_tac_toe/';">Demo</button></div>
-                            <h4><strong>React Tic-tac-toe</strong></h4>
-                            <p>Tic-tac-toe game where you can rewind your moves. <br />
-                                <span class="project-tech">Tech stack: HTML | CSS | React</span>
                             </p>
                         </article>
                         <article class="work">
