--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <a href="https://clothshop-1726f.web.app/"><img src="images/links/Cloth_shop.jpg" alt="Cloth app" class="link-image" /></a>
                             <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/shop';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://clothshop-1726f.web.app/'">Demo</button></div>
                             <h4><strong>Vue Cloth Shop</strong></h4>
-                            <p>You can navigate between cloth sections. Clicking "BUY" adds item to your cart. You can check value of your cart at any moment by clicking on cart icon.<br />
+                            <p>You can navigate between cloth sections. Clicking "ADD TO CART" adds item to your cart. You can check value of your cart at any moment by clicking on cart icon.<br />
                                 <span class="project-tech">	Tech stack: HTML | CSS | Vue |Vuex</span></p>
                         </article>
                         <article class="work">
