new project add

--- a/index.html
+++ b/index.html
@@ -117,8 +117,15 @@
                             <a href="https://clothshop-1726f.web.app/"><img src="images/links/Cloth_shop.jpg" alt="Cloth app" class="link-image" /></a>
                             <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/shop';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://clothshop-1726f.web.app/'">Demo</button></div>
                             <h4><strong>Vue Cloth Shop</strong></h4>
-                            <p>You can navigate between cloth sections. Clicking "ADD TO CART" adds item to your cart. You can check value of your cart at any moment by clicking on cart icon.<br />
-                                <span class="project-tech">	Tech stack: HTML | CSS | Vue |Vuex</span></p>
+                            <p>You can navigate between cloth sections. Clicking "BUY" adds item to your cart. You can check value of your cart at any moment by clicking on cart icon.<br />
+                                <span class="project-tech">	Tech stack: HTML | CSS | Vue | Vuex</span></p>
+                        </article>
+                        <article class="work">
+                            <a href="https://dariuszb94.github.io/Car-dealer"><img src="images/links/dealer.JPG" alt="Dealer app" class="link-image" /></a>
+                            <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/Car-dealer'">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/Car-dealer'">Demo</button></div>
+                            <h4><strong>React Car Dealer</strong></h4>
+                            <p>You can check offers by clicking "Offers", then you can see all offers. After clicking "See Offer", you can see details of offer, you can go back by clicking "Back to offers".<br />
+                                <span class="project-tech">	Tech stack: HTML | CSS | React | Redux </span></p>
                         </article>
                         <article class="work">
                             <a href="https://dariuszb94.github.io/Breakout/"><img src="images/links/Breakout.jpg" class="link-image" alt="Breakout game" /></a>
