car dealer image

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 <span class="project-tech">	Tech stack: HTML | CSS | Vue | Vuex</span></p>
                         </article>
                         <article class="work">
-                            <a href="https://dariuszb94.github.io/Car-dealer"><img src="images/links/dealer.JPG" alt="Dealer app" class="link-image" /></a>
+                            <a href="https://dariuszb94.github.io/Car-dealer"><img src="images/links/dealer.jpg" alt="Dealer app" class="link-image" /></a>
                             <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/Car-dealer'">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/Car-dealer'">Demo</button></div>
                             <h4><strong>React Car Dealer</strong></h4>
                             <p>You can check offers by clicking "Offers", then you can see all offers. After clicking "See Offer", you can see details of offer, you can go back by clicking "Back to offers".<br />
