--- a/index.html
+++ b/index.html
@@ -114,26 +114,18 @@
                     <h2>Recent projects</h2>
                     <div class="works">
                         <article class="work">
+                            <a href="https://dariuszb94.github.io/Lux-cars"><img src="images/links/car_dealer.jpg" alt="Car Dealer app" class="link-image" /></a>
+                            <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/Lux-cars'">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/Lux-cars'">Demo</button></div>
+                            <h4><strong>Car Dealership</strong></h4>
+                            <p>Dealership app lets you find your dream car. You can sort, filtrate cars, calculate loans for cars. Save favourite offers is also possible.<br />
+                                <span class="project-tech">	Tech stack: HTML | CSS | React | Redux | IndexedDB | Styled-Components</span></p>
+                        </article>
+                        <article class="work">
                             <a href="https://clothshop-1726f.web.app/"><img src="images/links/Cloth_shop.jpg" alt="Cloth app" class="link-image" /></a>
                             <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/shop';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://clothshop-1726f.web.app/'">Demo</button></div>
                             <h4><strong>Vue Cloth Shop</strong></h4>
                             <p>You can navigate between cloth sections. Clicking "BUY" adds item to your cart. You can check value of your cart at any moment by clicking on cart icon.<br />
                                 <span class="project-tech">	Tech stack: HTML | CSS | Vue | Vuex</span></p>
-                        </article>
-                        <article class="work">
-                            <a href="https://dariuszb94.github.io/Car-dealer"><img src="images/links/dealer.jpg" alt="Dealer app" class="link-image" /></a>
-                            <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/Car-dealer'">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/Car-dealer'">Demo</button></div>
-                            <h4><strong>React Car Dealer</strong></h4>
-                            <p>You can check offers by clicking "Offers", then you can see all offers. After clicking "See Offer", you can see details of offer, you can go back by clicking "Back to offers".<br />
-                                <span class="project-tech">	Tech stack: HTML | CSS | React | Redux </span></p>
-                        </article>
-                        <article class="work">
-                            <a href="https://dariuszb94.github.io/Tic_tac_toe/" ><img src="images/links/Tic_tac_toe.jpg" alt="Tic tac toe game" class="link-image"/></a>
-                            <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/Tic_tac_toe';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/Tic_tac_toe/';">Demo</button></div>
-                            <h4><strong>React Tic-tac-toe</strong></h4>
-                            <p>Tic-tac-toe game where you can rewind your moves. <br />
-                                <span class="project-tech">Tech stack: HTML | CSS | React</span>
-                            </p>
                         </article>
                         <article class="work">
                             <a href="https://dariuszb94.github.io/pokemon/"><img src="images/links/pokemon.jpg" alt="Angular Pokedex" class="link-image" /></a>
@@ -142,38 +134,6 @@
                             <p>List of pokemons fetched from API. You can choose your pokemon from list or search it.<br />
                                 <span class="project-tech">	Tech stack: HTML | CSS | Angular | API</span>
                             </p>
-                        </article>
-                        <article class="work">
-                            <a href="https://dariuszb94.github.io/MovieApp/" ><img src="images/links/Movie_DB.jpg" alt="Movie DataBase"  class="link-image"/></a>
-                            <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/MovieApp';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/MovieApp/';">Demo</button></div>
-                            <h4><strong>React The Movie Database</strong></h4>
-                            <p>Search engine for movies. Type movie title in searchbar and click "search", than you can go to one of the results. <br />
-                                <span class="project-tech">	Tech stack: HTML | CSS | React | Node.js | Axios | API</span>
-                            </p>
-                        </article>
-                        <article class="work">
-                            <a href="https://dariuszb94.github.io/React_snake_game/"><img src="images/links/Snake.jpg" alt="Snake game"  class="link-image"/></a>
-                            <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/React_snake_game';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/React_snake_game/';">Demo</button></div>
-                            <h4><strong>React Snake Game</strong></h4>
-                            <p>Snake can be steered by using arrow. Game will be stopped if snake bite itself.<br />
-                                <span class="project-tech">Tech stack: HTML | CSS | React | Node.js</span>
-                            </p>
-                         </article>
-                         <article class="work">
-                            <a href="https://dariuszb94.github.io/Sound_Generator/"><img src="images/links/Sound_generator.jpg" alt="React sound generator" class="link-image" /></a>
-                            <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/Sound_Generator';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/Sound_Generator/';">Demo</button></div>
-                            <h4><strong>React Sound Generator</strong></h4>
-                            <p>Clicking on pads or clicking on keyboard can generate sounds.<br />
-                                <span class="project-tech">	Tech stack: HTML | CSS | React</span>
-                            </p>
-                        </article>
-                        <article class="work">
-                            <a href="https://dariuszb94.github.io/Traffic-racer/"><img src="images/links/Traffic.jpg" alt="Traffic racer" class="link-image" /></a>
-                            <div class="linkButtons"><button class="codeButton btn btn-primary" onclick="window.location.href = 'https://github.com/Dariuszb94/Traffic-racer';">Code</button><button class="demoButton btn btn-primary" onclick="window.location.href = 'https://dariuszb94.github.io/Traffic-racer/';">Demo</button></div>
-                            <h4><strong>JQuery Traffic Racer</strong></h4>
-                            <p>Avoid collision with other cars using arrow keys. You can also see your high score. <br />
-                                <span class="project-tech">Tech stack: HTML | CSS | jQuery | Bootstrap</span>
-                            </p> 
                         </article>
                     </div>
                 </section>
