--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             <div class="backend-main">
                                 <header><h3>Backend:</h3></header>
                                 <div class="backend animate-skills">
-                                    <img src="images/skills/php.png" alt="php" class="frontend-img">
+                                    <img src="images/skills/php.jpg" alt="php" class="frontend-img">
                                 </div>
                             </div>
                             <div class="frontend-tools">
